--- a/packages/pentatrion-design/components/dialog/Dialog.scss
+++ b/packages/pentatrion-design/components/dialog/Dialog.scss
@@ -1,12 +1,12 @@
 .ll-dialog {
     $padding: .5rem;
-    position: relative;
-    background-color: white;
-    pointer-events: auto;
+    // position: relative;
+    // background-color: white;
+    // pointer-events: auto;
 
-    border-radius: var(--border-radius);
-    box-shadow: var(--shadow);
-    border-style: solid;
+    // border-radius: var(--border-radius);
+    // box-shadow: var(--shadow);
+    // border-style: solid;
 
     .bar-buttons {
         padding: .25rem;
@@ -44,108 +44,6 @@
         }
     }
 
-    .arrow {
-        width: 0;
-        height: 0;
-        position: absolute;
-        filter: drop-shadow(0 1px 3px #c9c9c9);
-    }
-
-    &[class*="placement-top"] {
-        border-top-width: 4px;
-
-        .arrow {
-            border-left: 8px solid transparent;
-            border-right: 8px solid transparent;
-            border-top: 8px solid white;
-            clip: rect(0px, 16px, 12px, 0px);
-            top: 100%;
-        }
-
-        transform-origin: bottom center;
-    }
-
-    &[class*="placement-top-start"] {
-        transform-origin: bottom left;
-    }
-
-    &[class*="placement-top-end"] {
-        transform-origin: bottom right;
-    }
-
-
-    &[class*="placement-bottom"] {
-        border-bottom-width: 4px;
-
-        .arrow {
-            border-left: 8px solid transparent;
-            border-right: 8px solid transparent;
-            border-bottom: 8px solid white;
-            clip: rect(-4px, 16px, 8px, 0px);
-            bottom: 100%;
-        }
-
-        transform-origin: top center;
-    }
-
-    &[class*="placement-bottom-start"] {
-        transform-origin: top left;
-    }
-
-    &[class*="placement-bottom-end"] {
-        transform-origin: top right;
-    }
-
-
-    &[class*="placement\-left"] {
-        border-left-width: 4px;
-
-        .arrow {
-            border-top: 8px solid transparent;
-            border-bottom: 8px solid transparent;
-            border-left: 8px solid white;
-            clip: rect(0px, 12px, 16px, 0px);
-            left: 100%;
-        }
-
-        &[data-status='open'],
-        &[data-status='close'] {
-            transform-origin: center right;
-        }
-    }
-
-    &[class*="placement-left-start"] {
-        transform-origin: top right;
-    }
-
-    &[class*="placement-left-end"] {
-        transform-origin: bottom right;
-    }
-
-    &[class*="placement\-right"] {
-        border-right-width: 4px;
-
-        .arrow {
-            border-top: 8px solid transparent;
-            border-bottom: 8px solid transparent;
-            border-right: 8px solid white;
-            clip: rect(0px, 8px, 16px, -4px);
-            right: 100%;
-        }
-
-        &[data-status='open'],
-        &[data-status='close'] {
-            transform-origin: center left;
-        }
-    }
-
-    &[class*="placement-right-start"] {
-        transform-origin: top left;
-    }
-
-    &[class*="placement-right-end"] {
-        transform-origin: bottom left;
-    }
 
     &.ll-select-dialog,
     &.ll-autocomplete-dialog {
@@ -156,65 +54,13 @@
 
 
 
-    .option {
-        padding: .5rem .5rem;
 
-        text-align: left;
-        outline: none;
-        position: relative;
-        z-index: 1;
-        cursor: pointer;
 
-        &:hover {
-            background-color: rgb(var(--color-gray-1));
-        }
-
-        &.active {
-            background-color: rgb(var(--color-gray-2));
-        }
-
-        &.selected,
-        &:focus {
-            background-color: rgb(var(--color-gray-2));
-            color: var(--text-strong);
-        }
-
-        &[disabled] {
-            color: rgb(var(--color-gray-6));
-            pointer-events: none;
-        }
-
-        i {
-            margin-right: .5rem;
-        }
-
-        .bullet {
-            width: 1rem;
-            height: 1rem;
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            outline: 2px solid rgb(var(--color-gray-2));
-            font-size: var(--font-size-xs);
-            border-radius: 50%;
-            margin: 0 .75rem 0 3px;
-        }
-
-        &.discret {
-            color: rgb(var(--color-gray-6));
-
-            .content {
-                font-size: .9rem;
-            }
-        }
-
-    }
-
-    &.compact {
-        .option {
-            padding: 0.125rem .5rem .125rem .125rem;
-        }
-    }
+    // &.compact {
+    //     .option {
+    //         padding: 0.125rem .5rem .125rem .125rem;
+    //     }
+    // }
 
     .options-container {
         max-height: 200px;
