--- a/packages/pentatrion-design/index.css
+++ b/packages/pentatrion-design/index.css
@@ -4,6 +4,7 @@
 @import "tailwindcss/components";
 @import "./tailwind/components.css" layer(components);
 @import "./tailwind/components-input-outline.css" layer(components);
+@import "./tailwind/components-resize-area.css" layer(components);
 
 @import "tailwindcss/utilities";
 @import "./tailwind/utilities.css" layer(utilities);
