--- a/packages/pentatrion-design/tailwind/components.css
+++ b/packages/pentatrion-design/tailwind/components.css
@@ -28,3 +28,38 @@
     margin: 0 0.75rem 0 3px;
   }
 }
+
+.p8n-separator {
+  @apply bg-gray-1 w-1/2 h-1 rounded-sm mx-auto relative;
+}
+
+.p8n-setting {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.p8n-setting > :first-child {
+  color: rgb(var(--color-gray-6));
+  font-size: var(--font-size-sm);
+}
+.p8n-setting > :nth-child(2) {
+  min-width: 160px;
+  text-align: right;
+}
+.p8n-setting > :nth-child(2) input {
+  text-align: right;
+}
+.p8n-setting.multiple {
+  align-items: flex-start;
+}
+.p8n-setting.multiple .ll-input-checkbox-container {
+  display: flex;
+}
+.p8n-setting.multiple .ll-input-checkbox-container span {
+  margin-left: auto;
+  order: 1;
+  margin-right: 1rem;
+}
+.p8n-setting.multiple .ll-input-checkbox-container input {
+  order: 2;
+}
