--- a/packages/pentatrion-design/index.css
+++ b/packages/pentatrion-design/index.css
@@ -10,3 +10,5 @@
 @import "tailwindcss/utilities";
 @import "./tailwind/utilities.css" layer(utilities);
 @import "./tailwind/utilities-dialog.css" layer(utilities);
+
+@import "pentatrion-fonts/fontello-lonlat";
