--- a/packages/pentatrion-design/tailwind/components-step.css
+++ b/packages/pentatrion-design/tailwind/components-step.css
@@ -1,95 +1,66 @@
+/* Ajouter un point */
 .ll-steps-extra {
-  .ll-button:first-child {
+  @apply flex justify-between;
+  & button:first-child {
     padding: calc(var(--step-circle-radius) / 2) calc(var(--step-circle-radius) / 2)
       calc(var(--step-circle-radius) / 2) calc(var(--step-circle-radius) * 1.5 + 1rem);
   }
 
-  .ll-marker {
+  & .ll-marker {
     transform: translate(calc(var(--step-circle-radius) / 3));
   }
-
-  display: flex;
-  justify-content: space-between;
 }
 
 .ll-steps {
-  position: relative;
+  @apply relative;
 
-  &.step-line {
-    --line-space: 4px;
-  }
-
-  &.steps-line {
-    --line-space: 0px;
-  }
-
-  &.marker-circle {
+  &[data-marker="circle"] {
     .marker {
+      @apply shadow bg-gray-1;
       width: calc(var(--step-circle-radius) * 2);
       height: calc(var(--step-circle-radius) * 2);
-      border-radius: 50%;
-      background-color: rgb(var(--color-gray-2));
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      box-shadow: var(--shadow);
 
       &.active {
-        background-color: var(--color-gray-3);
-        color: rgb(var(--color-text-white));
+        @apply bg-gray-2;
       }
     }
   }
 
-  &.marker-bullet {
+  &[data-marker="bullet"] {
     .marker {
+      @apply text-xs bg-gray-0 outline outline-2 outline-gray-2;
       margin: calc(var(--step-circle-radius) / 2);
-      margin-right: 0;
       width: calc(var(--step-circle-radius));
       height: calc(var(--step-circle-radius));
-      background-color: rgb(var(--color-gray-0));
-      border-radius: 50%;
-      outline: 2px solid rgb(var(--color-gray-2));
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      font-size: var(--font-size-xs);
 
       &.active {
-        outline-color: var(--color-gray-3);
+        @apply outline-gray-4;
       }
     }
   }
-
-  &.direction-horizontal {
-    &.marker-circle {
+  &[data-direction="horizontal"] {
+    @apply flex flex-wrap;
+    &[data-marker="circle"] {
       --line-width: calc(100% - var(--step-circle-radius) * 2 - var(--line-space) * 2);
       --line-left: calc(50% + var(--step-circle-radius) + var(--line-space));
     }
 
-    &.marker-bullet {
+    &[data-marker="bullet"] {
       --line-width: calc(100% - var(--step-circle-radius) - var(--line-space) * 2);
       --line-left: calc(50% + var(--step-circle-radius) / 2 + var(--line-space));
     }
 
-    display: flex;
-    flex-wrap: wrap;
-
-    .ll-step {
-      display: flex;
-      flex-direction: column;
-      flex: 1;
-      text-align: center;
-
+    & .ll-step {
+      @apply flex flex-col flex-1 text-center;
       .content {
-        margin-top: 0.5rem;
+        @apply mt-2;
       }
     }
 
-    &.step-line .ll-step:not(:last-child)::after {
+    &[data-global-line="false"] .ll-step:not(:last-child)::after {
       content: "";
-      border-style: none;
-      border-bottom-style: var(--border-style);
+      border-style: none none var(--line-style) none;
+
       width: var(--line-width);
       margin-top: -2px;
       order: -1;
@@ -99,65 +70,48 @@
     }
 
     .marker-container {
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      @apply flex-center;
     }
   }
 
-  &.direction-vertical {
-    &.marker-circle {
+  &[data-direction="vertical"] {
+    &[data-marker="circle"] {
       --line-top: calc(var(--step-circle-radius) * 2 + var(--line-space));
       --line-bottom: var(--line-space);
     }
 
-    &.marker-bullet {
+    &[data-marker="bullet"] {
       --line-top: calc(var(--step-circle-radius) * 1.5 + var(--line-space));
       --line-bottom: calc(-0.5 * var(--step-circle-radius) + var(--line-space));
     }
 
     .ll-step {
-      display: flex;
-      align-items: flex-start;
-      gap: 1rem;
-      position: relative;
-
+      @apply relative gap-1 items-start flex;
       &:not(:last-child) {
         padding-bottom: 0.5rem;
       }
-
-      &.text-center {
-        align-items: center;
-      }
     }
 
-    &.step-line .ll-step:not(:last-child)::after {
-      border-style: none;
+    &[data-global-line="false"] .ll-step:not(:last-child)::after {
+      @apply absolute left-0 w-0;
       content: "";
-      position: absolute;
-      left: 0;
       top: var(--line-top);
       bottom: var(--line-bottom);
       transform: translateX(calc(var(--step-circle-radius) - 1px));
-      width: 0px;
-      border-left-style: var(--border-style);
+      border-style: none none none var(--line-style);
     }
 
-    &.steps-line::after {
-      border-style: none;
+    &[data-global-line="true"]::after {
+      @apply absolute left-0 w-0 z-0;
       content: "";
-      position: absolute;
-      left: 0;
       top: var(--line-top);
       bottom: var(--line-top);
       transform: translateX(calc(var(--step-circle-radius) - 1px));
-      width: 0px;
-      border-left-style: var(--border-style);
-      z-index: 0;
+      border-style: none none none var(--line-style);
     }
 
     .content {
-      flex: 1;
+      @apply flex-1;
     }
 
     .title {
@@ -165,45 +119,40 @@
     }
   }
 
-  &.steps-line {
+  &[data-global-line="true"] {
     &::after {
-      border-width: 2px;
-      border-color: rgb(var(--color-gray-2));
+      @apply border-gray-2 border-2;
     }
 
     &.status-done::after {
-      border-color: var(--color-gray-3);
+      @apply border-gray-3;
     }
   }
 }
 
 .ll-step {
-  .step-line &:not(:last-child) {
+  [data-global-line="false"] &:not(:last-child) {
     &::after {
-      border-width: 2px;
-      border-color: rgb(var(--color-gray-2));
+      @apply border-gray-2 border-2;
     }
 
     &.status-done::after {
-      border-color: var(--color-gray-3);
+      @apply border-gray-3;
     }
   }
 
   .handle {
-    color: rgb(var(--color-gray-6));
-    transition: all ease 0.3s;
+    @apply cursor-row-resize text-gray-6 transition-all;
 
     &.active {
       &:hover {
-        color: transparent;
-        background-color: rgb(var(--color-gray-2));
+        @apply bg-gray-2 text-transparent;
       }
     }
   }
 
   .ll-autocomplete {
     @apply flex-1;
-    flex: 1;
   }
 
   .ll-button {
