design fix input variant ghost

--- a/apps/front/src/maplibregl-css/ctrl/_components.css
+++ b/apps/front/src/maplibregl-css/ctrl/_components.css
@@ -28,7 +28,7 @@
     }
 
     .maplibregl-ctrl-group button+button {
-        border-top: 1px solid ButtonText
+        border-top: 1px solid black;
     }
 }
 
