--- a/apps/front/src/maplibregl-css/ctrl/attrib.css
+++ b/apps/front/src/maplibregl-css/ctrl/attrib.css
@@ -1,111 +1,19 @@
-.ll-layer-switcher-expanded .maplibregl-ctrl.maplibregl-ctrl-attrib {
-    visibility: hidden;
-}
-
 .maplibregl-attrib-empty {
-    display: none
+  @apply hidden;
 }
 
 details.maplibregl-ctrl.maplibregl-ctrl-attrib {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: max-content;
-    margin: .25rem;
-}
+  @apply bottom-2 right-2 absolute rounded-full bg-gray-0;
 
-@media screen {
-    .maplibregl-ctrl-attrib.maplibregl-compact {
-        background-color: white;
-        border-radius: 14px;
-        box-sizing: content-box;
-        color: #000;
-        min-height: 24px;
-        padding: 2px 28px 2px 0;
-    }
+  & .maplibregl-ctrl-attrib-button {
+    @apply absolute bottom-0 right-0 w-6 h-6 inline-flex bg-gray-0 text-gray-6 hover:text-gray-7 cursor-pointer items-center justify-center rounded-full after:content-['\f129'] font-fontello;
+  }
 
-    .maplibregl-ctrl-attrib.maplibregl-compact-show {
-        padding: 2px 28px 2px 8px;
-        visibility: visible
-    }
+  &.maplibregl-compact-show .maplibregl-ctrl-attrib-inner {
+    @apply pr-6 pl-1;
+  }
 
-    .maplibregl-ctrl-bottom-left>.maplibregl-ctrl-attrib.maplibregl-compact-show,
-    .maplibregl-ctrl-top-left>.maplibregl-ctrl-attrib.maplibregl-compact-show {
-        border-radius: 12px;
-        padding: 2px 8px 2px 28px
-    }
-
-    .maplibregl-ctrl-attrib.maplibregl-compact .maplibregl-ctrl-attrib-inner {
-        display: none
-    }
-
-    .maplibregl-ctrl-attrib-button {
-        background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill-rule='evenodd' viewBox='0 0 20 20'%3E%3Cpath d='M4 10a6 6 0 1 0 12 0 6 6 0 1 0-12 0m5-3a1 1 0 1 0 2 0 1 1 0 1 0-2 0m0 3a1 1 0 1 1 2 0v3a1 1 0 1 1-2 0'/%3E%3C/svg%3E");
-        border: 0;
-        border-radius: 12px;
-        box-sizing: border-box;
-        cursor: pointer;
-        display: none;
-        height: 24px;
-        outline: none;
-        position: absolute;
-        right: 0;
-        top: 0;
-        width: 24px;
-        margin: 2px;
-
-    }
-
-    .maplibregl-ctrl-attrib summary.maplibregl-ctrl-attrib-button {
-        appearance: none;
-        list-style: none
-    }
-
-    .maplibregl-ctrl-attrib summary.maplibregl-ctrl-attrib-button::-webkit-details-marker {
-        display: none
-    }
-
-
-    .maplibregl-ctrl-attrib.maplibregl-compact .maplibregl-ctrl-attrib-button,
-    .maplibregl-ctrl-attrib.maplibregl-compact-show .maplibregl-ctrl-attrib-inner {
-        display: block
-    }
-
-
-    .maplibregl-ctrl-bottom-left .maplibregl-ctrl-attrib-button,
-    .maplibregl-ctrl-top-left .maplibregl-ctrl-attrib-button {
-        left: 0
-    }
-
-    .maplibregl-ctrl-bottom-right>.maplibregl-ctrl-attrib.maplibregl-compact:after {
-        bottom: 0;
-        right: 0
-    }
-
-    .maplibregl-ctrl-top-right>.maplibregl-ctrl-attrib.maplibregl-compact:after {
-        right: 0;
-        top: 0
-    }
-
-    .maplibregl-ctrl-top-left>.maplibregl-ctrl-attrib.maplibregl-compact:after {
-        left: 0;
-        top: 0
-    }
-
-    .maplibregl-ctrl-bottom-left>.maplibregl-ctrl-attrib.maplibregl-compact:after {
-        bottom: 0;
-        left: 0
-    }
-}
-
-@media screen and (-ms-high-contrast:active) {
-    .maplibregl-ctrl-attrib.maplibregl-compact:after {
-        background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='%23fff' fill-rule='evenodd' viewBox='0 0 20 20'%3E%3Cpath d='M4 10a6 6 0 1 0 12 0 6 6 0 1 0-12 0m5-3a1 1 0 1 0 2 0 1 1 0 1 0-2 0m0 3a1 1 0 1 1 2 0v3a1 1 0 1 1-2 0'/%3E%3C/svg%3E")
-    }
-}
-
-@media screen and (-ms-high-contrast:black-on-white) {
-    .maplibregl-ctrl-attrib.maplibregl-compact:after {
-        background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill-rule='evenodd' viewBox='0 0 20 20'%3E%3Cpath d='M4 10a6 6 0 1 0 12 0 6 6 0 1 0-12 0m5-3a1 1 0 1 0 2 0 1 1 0 1 0-2 0m0 3a1 1 0 1 1 2 0v3a1 1 0 1 1-2 0'/%3E%3C/svg%3E")
-    }
+  &:not(.maplibregl-compact-show) .maplibregl-ctrl-attrib-inner {
+    @apply hidden;
+  }
 }
