--- a/packages/pentatrion-design/tailwind/base.css
+++ b/packages/pentatrion-design/tailwind/base.css
@@ -60,6 +60,13 @@ abbr {
   @apply underline decoration-dashed cursor-help;
 }
 
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  display: none;
+}
+
 :root {
   --color-white: 255 255 255;
   --color-black: 0 0 0;
@@ -178,6 +185,4 @@ abbr {
   --color-gray-1: 35 35 35; /* rgb(35, 35, 35); */
   --color-gray-0: 21 29 29; /* rgb(21, 29, 29); */
   --color-gray-text: var(--color-gray-8);
-
-  --a: rgb(21, 29, 29);
 }
