front fix pegman image relative url

--- a/packages/pentatrion-geo/src/maplibre/LLMarker.css
+++ b/packages/pentatrion-geo/src/maplibre/LLMarker.css
@@ -256,7 +256,7 @@
         left: 50%;
 
         content: "";
-        background-image: url(./assets/maplibre/marker-shadow-centered.png);
+        background-image: url(/assets/maplibre/marker-shadow-centered.png);
         background-size: cover;
         pointer-events: none;
         width: var(--marker-size);
@@ -271,7 +271,7 @@
         left: 0;
         width: var(--marker-size);
         height: var(--marker-size);
-        background-image: url(./assets/pegman/pegman-rotation-1x.png);
+        background-image: url(/assets/pegman/pegman-rotation-1x.png);
         background-position: 0px 0px;
       }
     }
