--- a/apps/sandbox/src/mrc/06-use-rcontrol/App.scss
+++ b/apps/sandbox/src/mrc/06-use-rcontrol/App.scss
@@ -2,21 +2,18 @@ html,
 body,
 #root,
 #map {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .sidebar {
-    background-color: rgba(35, 55, 75, 0.9);
-    color: #fff;
-    padding: 6px 12px;
-    font-family: monospace;
-    z-index: 1;
-    position: absolute;
-    top: 0;
-    left: 0;
-    margin: 12px;
-    border-radius: 4px;
+  display: inline-block;
+  padding: 10px;
+  margin: 10px;
+
+  box-shadow: 0 0 0 2px rgba(0, 0, 0, .1);
+  background: #fff;
+  border-radius: 4px;
 }
