mrc add GradientMarker FloatingPopup

--- a/packages/pentatrion-geo/index.css
+++ b/packages/pentatrion-geo/index.css
@@ -5,3 +5,4 @@
 @import "pentatrion-design/fontello.css";
 @import "./fontello-geo-inline.css";
 @import "./maplibre/Marker.css";
+@import "./maplibre/Pegman.css";
