maplibre-theme add fontello nodejs script

--- a/packages/maplibre-theme/src/themes/default/ctrl/ctrl-attrib.postcss
+++ b/packages/maplibre-theme/src/themes/default/ctrl/ctrl-attrib.postcss
@@ -29,7 +29,7 @@
   .maplibregl-ctrl-attrib-button {
     cursor: pointer;
     position: absolute;
-    background-image: svg-load("../../../assets/default/maplibregl-ctrl-attrib.svg");
+    background-image: svg-load("../assets/maplibregl-ctrl-attrib.svg");
     background-color: rgb(255 255 255 / 50%);
     width: 24px;
     height: 24px;
@@ -73,13 +73,13 @@
 
 @media screen and (-ms-high-contrast: active) {
   .maplibregl-ctrl-attrib.maplibregl-compact::after {
-    background-image: svg-load("../../../assets/default/maplibregl-ctrl-attrib.svg", fill=#fff);
+    background-image: svg-load("../assets/maplibregl-ctrl-attrib.svg", fill=#fff);
   }
 }
 
 @media screen and (-ms-high-contrast: black-on-white) {
   .maplibregl-ctrl-attrib.maplibregl-compact::after {
-    background-image: svg-load("../../../assets/default/maplibregl-ctrl-attrib.svg");
+    background-image: svg-load("../assets/maplibregl-ctrl-attrib.svg");
   }
 }
 
