--- a/apps/mrc-doc/src/main.css
+++ b/apps/mrc-doc/src/main.css
@@ -3,7 +3,7 @@
 @import "tailwindcss/utilities";
 
 @import "maplibre-theme/dist/core.css";
-import "maplibre-theme/dist/default.css";
+@import "maplibre-theme/dist/pentatrion.css";
 @import "maplibre-react-components/dist/mrc.css";
 
 @import "./icons/fontello.css";
