--- a/packages/maplibre-theme/src/themes/default/ctrl/ctrl-fullscreen.postcss
+++ b/packages/maplibre-theme/src/themes/default/ctrl/ctrl-fullscreen.postcss
@@ -1,33 +1,27 @@
 .maplibregl-ctrl button.maplibregl-ctrl-fullscreen .maplibregl-ctrl-icon {
-  background-image: svg-load("../../../assets/default/maplibregl-ctrl-fullscreen.svg", fill: #333);
+  background-image: svg-load("../assets/maplibregl-ctrl-fullscreen.svg", fill: #333);
 }
 
 .maplibregl-ctrl button.maplibregl-ctrl-shrink .maplibregl-ctrl-icon {
-  background-image: svg-load("../../../assets/default/maplibregl-ctrl-shrink.svg");
+  background-image: svg-load("../assets/maplibregl-ctrl-shrink.svg");
 }
 
 @media (-ms-high-contrast: active) {
   .maplibregl-ctrl button.maplibregl-ctrl-fullscreen .maplibregl-ctrl-icon {
-    background-image: svg-load(
-      "../../../assets/default/maplibregl-ctrl-fullscreen.svg",
-      fill: #fff
-    );
+    background-image: svg-load("../assets/maplibregl-ctrl-fullscreen.svg", fill: #fff);
   }
 
   .maplibregl-ctrl button.maplibregl-ctrl-shrink .maplibregl-ctrl-icon {
-    background-image: svg-load("../../../assets/default/maplibregl-ctrl-shrink.svg", fill: #fff);
+    background-image: svg-load("../assets/maplibregl-ctrl-shrink.svg", fill: #fff);
   }
 }
 
 @media (-ms-high-contrast: black-on-white) {
   .maplibregl-ctrl button.maplibregl-ctrl-fullscreen .maplibregl-ctrl-icon {
-    background-image: svg-load(
-      "../../../assets/default/maplibregl-ctrl-fullscreen.svg",
-      fill: #000
-    );
+    background-image: svg-load("../assets/maplibregl-ctrl-fullscreen.svg", fill: #000);
   }
 
   .maplibregl-ctrl button.maplibregl-ctrl-shrink .maplibregl-ctrl-icon {
-    background-image: svg-load("../../../assets/default/maplibregl-ctrl-shrink.svg", fill: #000);
+    background-image: svg-load("../assets/maplibregl-ctrl-shrink.svg", fill: #000);
   }
 }
