maplibre-theme add optimized theme

--- a/packages/maplibre-theme/src/themes/modern/ctrl/ctrl--button.postcss
+++ b/packages/maplibre-theme/src/themes/modern/ctrl/ctrl--button.postcss
@@ -1,3 +1,8 @@
+.maplibregl-ctrl-group button {
+  display: block;
+  background-color: transparent;
+}
+
 .maplibregl-ctrl button,
 .maplibregl-ctrl-attrib-button {
   width: 2rem;
