--- a/packages/maplibre-theme/src/themes/optimized/ctrl/ctrl--components.postcss
+++ b/packages/maplibre-theme/src/themes/optimized/ctrl/ctrl--components.postcss
@@ -1,10 +1,10 @@
 .maplibregl-ctrl-group {
-  border-radius: 1rem;
-  background: #fff;
+  border-radius: var(--ml-ctrl-border-radius);
+  background: rgb(var(--ml-c-bg));
 }
 
 .maplibregl-ctrl-group:not(:empty) {
-  /* box-shadow: 0 0 0 2px rgb(0 0 0 / 10%); */
+  box-shadow: var(--ml-shadow-ctrl);
 }
 
 @media (-ms-high-contrast: active) {
@@ -14,7 +14,7 @@
 }
 
 .maplibregl-ctrl-group button + button {
-  border-top: 1px solid #ddd;
+  border-top: 1px solid rgb(var(--ml-c-gray-3));
 }
 
 @media (-ms-high-contrast: active) {
@@ -24,11 +24,11 @@
 }
 
 .maplibregl-ctrl-group button:first-child {
-  border-radius: 1rem 1rem 0 0;
+  border-radius: var(--ml-ctrl-border-radius) var(--ml-ctrl-border-radius) 0 0;
 }
 
 .maplibregl-ctrl-group button:last-child {
-  border-radius: 0 0 1rem 1rem;
+  border-radius: 0 0 var(--ml-ctrl-border-radius) var(--ml-ctrl-border-radius);
 }
 
 .maplibregl-ctrl-group button:only-child {
